--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "author": "oleg granov",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "modulename": "^0.0.4",
     "path": "^0.12.7",
     "pg": "^8.7.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sequelize": "^6.12.0-beta.3",
     "uuid": "^8.3.2"
   },
